favicon and minor fix

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title></title>
+    <title>Associative3D: Volumetric Reconstruction from Sparse Views</title>
     <meta property="og:title" content="Associative3D: Volumetric Reconstruction from Sparse Views"/>
     <meta property="og:image" content="teaser.png"/>
     <meta property="og:description" content="S. Qian, L. Jin, D. F. Fouhey. ECCV 2020." />
@@ -79,17 +79,17 @@
       <tr>
         <td align=center width=100px>
           <center>
-            <span style="font-size:20px"><a href="#">[pdf]</a></span>
+            <span style="font-size:20px">[pdf]</span>
           </center>
         </td>
         <td align=center width=100px>
           <center>
-            <span style="font-size:20px"><a href="#">[code]</a></span>
+            <span style="font-size:20px">[code]</span>
           </center>
         </td>
         <td align=center width=100px>
           <center>
-            <span style="font-size:20px"><a href="#">[video]</a></span>
+            <span style="font-size:20px">[video]</span>
           </center>
         </td>
       </tr>
@@ -376,7 +376,7 @@
             <center>
               <h1>Acknowledgements</h1>
             </center>
-            This webpage template was borrowed from <a href="https://nileshkulkarni.github.io/">Nilesh Kulkarni</a>, which originally come from some <a href="https://richzhang.github.io/colorization/">colorful folks</a>. The interactive examples are powered by <a href="https://modelviewer.dev/">model-viewer</a>.
+            This webpage template was borrowed from <a href="https://nileshkulkarni.github.io/acsm/">Nilesh Kulkarni</a>, which originally come from some <a href="https://richzhang.github.io/colorization/">colorful folks</a>. The interactive examples are powered by <a href="https://modelviewer.dev/">model-viewer</a>.
           </left>
         </td>
       </tr>
