--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
       <tr>
         <td align=center width=100px>
           <center>
-            <span style="font-size:20px">[pdf]</span>
+            <span style="font-size:20px"><a href="https://arxiv.org/abs/2007.13727">[pdf]</a></span>
           </center>
         </td>
         <td align=center width=100px>
