update video link

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         </td>
         <td align=center width=100px>
           <center>
-            <span style="font-size:20px">[video]</span>
+            <span style="font-size:20px"><a href="https://youtu.be/sygHC8r26bc">[video]</a></span>
           </center>
         </td>
       </tr>
