--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         </td>
         <td align=center width=100px>
           <center>
-            <span style="font-size:20px">[code]</span>
+            <span style="font-size:20px"><a href="https://github.com/JasonQSY/Associative3D">[code]</a></span>
           </center>
         </td>
         <td align=center width=200px>
