increase model resolution

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta property="og:title" content="Associative3D: Volumetric Reconstruction from Sparse Views"/>
     <meta property="og:image" content="teaser.png"/>
     <meta property="og:description" content="S. Qian, L. Jin, D. F. Fouhey. ECCV 2020." />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     
     <!-- webpage template-->
     <link rel="stylesheet" href="website.css">
