--- a/index.html
+++ b/index.html
@@ -379,6 +379,8 @@
             <center>
               <h1>Acknowledgements</h1>
             </center>
+            Toyota Research Institute (“TRI”) provided funds to assist the authors with their research but this article solely reflects the opinions and conclusions of its authors and not TRI or any other Toyota entity.
+            <br><br>
             This webpage template was borrowed from <a href="https://nileshkulkarni.github.io/acsm/">Nilesh Kulkarni</a>, which originally come from some <a href="https://richzhang.github.io/colorization/">colorful folks</a>. The interactive examples are powered by <a href="https://modelviewer.dev/">model-viewer</a>.
           </left>
         </td>
